library updates * added redis-client * added before and after middleware for redis cache * added globl set default config for redis cache middleware

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://rajathgunners:artsenal2020@github.com/rajathgunners/middy-redis-cache.git"
+    "url": "git://github.com/rajathgunners/middy-redis-cache.git"
   },
   "author": "Rajath",
   "license": "ISC",
