--- a/package/package.json
+++ b/package/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "middy-redis-cache",
+  "name": "@devraj95/middy-redis-cache",
   "version": "1.0.0",
   "description": "redis cache middleware for serverless API Gateway routes",
-  "main": "handler.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +17,12 @@
   },
   "homepage": "https://github.com/rajathgunners/middy-redis-cache#readme",
   "dependencies": {
-    "@middy/core": "^4.5.5",
     "@redis/client": "^1.5.8"
+  },
+  "devDependencies": {
+    "@types/aws-lambda": "^8.10.130",
+    "@types/node": "^20.10.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   }
 }
