--- a/package/package.json
+++ b/package/package.json
@@ -24,5 +24,12 @@
     "@types/node": "^20.10.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
-  }
+  },
+  "keywords": [
+    "middy",
+    "redis",
+    "cache",
+    "serverless",
+    "API Gateway"
+  ]
 }
